feat: Add session control buttons for opening sessions in new window and tab group

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
     "clipboardRead",
     "clipboardWrite",
     "notifications",
+    "tabGroups",
     "storage"
   ],
   "incognito": "spanning"
